--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="לחמים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219161352929" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219163014387" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200219162447552" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200219164047618" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -15889,7 +15889,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170820171314166" modified="20181020120945593" tags="[[המטבח על פי ז'נבייב]] אימהות" title="סולטנה">
+<div created="20170820171314166" modified="20200219164118288" tags="[[המטבח על פי ז'נבייב]] אימהות" title="סולטנה">
 <pre>[img[pictures/sultana.jpg]]
 
 !!![[יויו]]:
@@ -15906,7 +15906,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-&lt;&lt;list-links filter:&quot;[tag[סולטנה]]&quot;&gt;&gt;</pre>
+&lt;&lt;englink [[Sultana]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20170908140800978" modified="20170908165437244" tags="סולטנה" title="סולטנה ויסמין">
 <pre>[img[pictures/sultana-veyasmin.jpg]]
@@ -18019,7 +18022,7 @@ Fapina''
 &lt;&lt;englink [[Rushell]]&gt;&gt;
 </pre>
 </div>
-<div created="20170822191101898" modified="20200208130344517" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] מסעדות מטבחים [[בדרך לאן שהוא]]" title="רביזיה במטבח">
+<div created="20170822191101898" modified="20200219163806904" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] מסעדות מטבחים [[בדרך לאן שהוא]]" title="רביזיה במטבח">
 <pre>[img[pictures/revisia-bamitbach.jpg]]
 
 !!![[ז'נבייב]]:
@@ -18032,7 +18035,7 @@ Fapina''
 
 
 
-</pre>
+&lt;&lt;englink [[Revision in the kitchen]]&gt;&gt;</pre>
 </div>
 <div created="20181223141707382" modified="20200217151109444" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="רדיו epgb">
 <pre>[img[pictures/radio-epgb.jpg]]
@@ -18763,7 +18766,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170820121344664" modified="20190617134920443" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="שערות לאחור">
+<div created="20170820121344664" modified="20200219163208983" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="שערות לאחור">
 <pre>[img[pictures/searot-leachor.jpg]]
 
 !!![[ז'נבייב]]:
@@ -18777,7 +18780,10 @@ Fapina''
 בסוף יום העבודה הראשון שלה שוחחנו, והיא אמרה:
 
 //
-ברשותך, אני מבינה שזה עוד לא הזמן שלי להעיר הערות, אבל דבר אחד, לא מפריע לי כובע או לא כובע, אבל אי אפשר שהשערות של החברה יטבלו באוכל ויתרוצצו על הפנים - במטבח משאירים את השערות מאחור, אני בעד קשתות.//</pre>
+ברשותך, אני מבינה שזה עוד לא הזמן שלי להעיר הערות, אבל דבר אחד, לא מפריע לי כובע או לא כובע, אבל אי אפשר שהשערות של החברה יטבלו באוכל ויתרוצצו על הפנים - במטבח משאירים את השערות מאחור, אני בעד קשתות.//
+
+
+&lt;&lt;englink [[Hair up]]&gt;&gt;</pre>
 </div>
 <div created="20161113183624587" modified="20200202192004341" tags="[[אחיות חוץ]] מוזיקה" title="שרלה הייתה אוהבת את זה">
 <pre>[img[pictures/sarale-hayta.jpg]]
