--- a/english.html
+++ b/english.html
@@ -385,6 +385,8 @@ Error message and password prompt
 
 <li>HaAchim</li>
 
+<li>Hair up</li>
+
 <li>Hamigdalor</li>
 
 <li>Hanna our mother</li>
@@ -557,6 +559,8 @@ Error message and password prompt
 
 <li>Restaurants</li>
 
+<li>Revision in the kitchen</li>
+
 <li>RIP Dina</li>
 
 <li>Roje</li>
@@ -586,6 +590,8 @@ Error message and password prompt
 <li>Steve Buscemi</li>
 
 <li>Stories I`ve told Norma</li>
+
+<li>Sultana</li>
 
 <li>Technical director</li>
 
@@ -8549,7 +8555,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219162425747" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219163535067" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8558,7 +8564,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Lehamim [[Coen Sisters]]" title="$:/StoryList">
+<div list="Sultana [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9607,6 +9613,24 @@ Also now, since I've opened this site, she hasn't stopped writing, filling and d
 
 </pre>
 </div>
+<div created="20200219162857382" modified="20200219163847674" tags="[[The kitchen by Genevieve]] [[Food addicts]] Kitchens [[Menopause sisters]]" title="Hair up">
+<pre>
+[img[pictures/searot-leachor.jpg]]
+
+!!![[Genevieve]]:
+
+In November I'm going to turn 46, and with the encouragement of Joseph, I've decided to do a [[revision in the kitchen|Revision in the kitchen]].
+
+First of all- to bring another cook, and work less, and secondly renovate the restaurant and the menu a little bit. 
+
+I hired [[Sultana]], a lovely 56-year-old woman.
+
+At the end of her first working day we chatted, and she said:
+
+//If I may, I understand it's not my time yet to make remarks, but one thing, I don’t care for a hat or not, but you can't have the guys' hair dipping in the food and scampering on their faces- in the kitchen you leave the hair up, I'm in favor of bows.//
+
+ &lt;&lt;heblink [[שערות לאחור]]&gt;&gt;</pre>
+</div>
 <div created="20200219153430591" modified="20200219155859878" tags="[[Here in the Ghetto]] Metafiction [[True stories]]" title="Hamigdalor">
 <pre>[img[pictures/hamigdalor.jpg]]
 
@@ -10010,8 +10034,7 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
 </pre>
 </div>
 <div created="20200219162401317" modified="20200219162549802" tags="[[Here in the Ghetto]] [[Coffee shops]] Restaurants Baking [[Food addicts]] Kitchens" title="Lehamim">
-<pre>
-[img[pictures/breads.jpg]]
+<pre>[img[pictures/breads.jpg]]
 
 
 
@@ -10084,7 +10107,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200219162535117" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200219163915518" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10697,6 +10720,17 @@ From our [[rear window|https://www.imdb.com/title/tt0047396/]] you can mostly he
 
  &lt;&lt;heblink [[מסעדות]]&gt;&gt;</pre>
 </div>
+<div created="20200219163524836" modified="20200219163712182" tags="Kitchens Restaurants [[The kitchen by Genevieve]] [[On the road to somewhere]] [[Food addicts]]" title="Revision in the kitchen">
+<pre>
+[img[pictures/revisia-bamitbach.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[רביזיה במטבח]]&gt;&gt;
+</pre>
+</div>
 <div created="20200215173704718" modified="20200215175926497" tags="Mothers [[The Baumans]]" title="RIP Dina">
 <pre>[img[pictures/ima-shel-gura.jpg]]
 
@@ -10885,6 +10919,13 @@ You can read more [[trivia details|https://m.imdb.com/name/nm0000114/trivia?ref_
 
 </pre>
 </div>
+<div created="20200219163855213" modified="20200219164004247" tags="Mothers [[The kitchen by Genevieve]]" title="Sultana">
+<pre>
+[img[pictures/sultana.jpg]]
+
+
+ &lt;&lt;heblink [[סולטנה]]&gt;&gt;</pre>
+</div>
 <div created="20200219131041061" modified="20200219131244245" tags="TV [[Here in the Ghetto]] [[True stories]]" title="Technical director">
 <pre>[img[pictures/natav.jpg]]
 
@@ -10920,8 +10961,7 @@ When I was a student, I used to work as a security guard at the Editorial's yard
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
 </div>
 <div created="20200219160048637" modified="20200219161134785" tags="HH Coffee" title="The bartender">
-<pre>
-[img[pictures/9q6T8aBMBF8FbdcN.JPG]]
+<pre>[img[pictures/9q6T8aBMBF8FbdcN.JPG]]
 
 !!![[Gura]]:
 
@@ -11239,8 +11279,7 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
  &lt;&lt;heblink [[עושים שלום]]&gt;&gt;</pre>
 </div>
 <div created="20200219161330581" modified="20200219162258283" tags="[[Here in the Ghetto]] Houses" title="TLV">
-<pre>
-[img[pictures/tlv.jpg]]
+<pre>[img[pictures/tlv.jpg]]
 
 !!![[Tomer]]:
 
