--- a/english.html
+++ b/english.html
@@ -8555,7 +8555,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219163535067" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219164016415" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8564,7 +8564,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Sultana [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10919,9 +10919,23 @@ You can read more [[trivia details|https://m.imdb.com/name/nm0000114/trivia?ref_
 
 </pre>
 </div>
-<div created="20200219163855213" modified="20200219164004247" tags="Mothers [[The kitchen by Genevieve]]" title="Sultana">
+<div created="20200219163855213" modified="20200219164536308" tags="Mothers [[The kitchen by Genevieve]] Restaurants" title="Sultana">
 <pre>
 [img[pictures/sultana.jpg]]
+
+
+!!![[Yoyo]]:
+
+Sultana, was born in Greece, and at the age of one year old she came to Paris with her mother and her grandmother, following a man who fell in love with her grandma. She's never met her father.
+
+When Sultana was 12, her mother fell in love with a Belgium man, and went to live with him in Belgium. Sultana preferred to stay with her grandma in Paris, and she visited her mother every summer.
+
+She spent many hours with her grandma in the kitchen, also when she did her homework or did handicraft.
+
+When she got married at 25, she was already after art first degree studies, and after a long trip in Europe. After her first birth-giving she started going to different courses of cooking and baking, and when the boys grew up she started working at restaurants.
+ 
+She's 56, married to Jan Paul and mother of two boys, Serge (30) and Camil (28).
+
 
 
  &lt;&lt;heblink [[סולטנה]]&gt;&gt;</pre>
