--- a/english.html
+++ b/english.html
@@ -575,6 +575,8 @@ Error message and password prompt
 
 <li>Scents</li>
 
+<li>Semolina cake</li>
+
 <li>Shoretzky</li>
 
 <li>Siach Cafe</li>
@@ -592,6 +594,8 @@ Error message and password prompt
 <li>Stories I`ve told Norma</li>
 
 <li>Sultana</li>
+
+<li>Sultana and Yasmin</li>
 
 <li>Technical director</li>
 
@@ -8555,7 +8559,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219164016415" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219170906884" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8584,7 +8588,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219162014243" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219170343921" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10107,7 +10111,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200219163915518" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200219170918891" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10803,6 +10807,18 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 
  &lt;&lt;heblink [[ריחות]]&gt;&gt;</pre>
 </div>
+<div created="20200219170734669" modified="20200219170944403" tags="Baking [[Food addicts]] Recipes" title="Semolina cake">
+<pre>
+[img[pictures/ugat-solet.jpg]]
+
+
+
+ &lt;&lt;heblink [[עוגת סולת]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20200217142305955" modified="20200219150409219" tags="[[Here in the Ghetto]] [[Food addicts]]" title="Shoretzky">
 <pre>[img[pictures/shorezky.jpg]]
 
@@ -10919,7 +10935,7 @@ You can read more [[trivia details|https://m.imdb.com/name/nm0000114/trivia?ref_
 
 </pre>
 </div>
-<div created="20200219163855213" modified="20200219164536308" tags="Mothers [[The kitchen by Genevieve]] Restaurants" title="Sultana">
+<div created="20200219163855213" modified="20200219170137506" tags="Mothers [[The kitchen by Genevieve]] Restaurants" title="Sultana">
 <pre>
 [img[pictures/sultana.jpg]]
 
@@ -10934,11 +10950,27 @@ She spent many hours with her grandma in the kitchen, also when she did her home
 
 When she got married at 25, she was already after art first degree studies, and after a long trip in Europe. After her first birth-giving she started going to different courses of cooking and baking, and when the boys grew up she started working at restaurants.
  
-She's 56, married to Jan Paul and mother of two boys, Serge (30) and Camil (28).
+She's 56, married to Jan Paul and mother of two boys, Serge (30) and [[Camil (28)|Sultana and Yasmin]].
 
 
 
  &lt;&lt;heblink [[סולטנה]]&gt;&gt;</pre>
+</div>
+<div created="20200219165844669" modified="20200219170648067" tags="[[Coen sister]]" title="Sultana and Yasmin">
+<pre>
+[img[pictures/sultana-veyasmin.jpg]]
+
+!!![[Yoyo]]:
+
+In the begging of the week, Sultana walked in [[the Couscous|The Couscous]] with a broad smile, in her hands a baking dish and said in a rejoiced voice:
+
+&quot;Camil, my younger, had a beautiful baby yesterday. They named her Yasmin, and I'm a grandma&quot;
+
+We rejoiced and danced and sang and ate her magnificent [[semolina cake|Semolina cake]].
+
+
+ &lt;&lt;heblink [[סולטנה ויסמין]]&gt;&gt;
+</pre>
 </div>
 <div created="20200219131041061" modified="20200219131244245" tags="TV [[Here in the Ghetto]] [[True stories]]" title="Technical director">
 <pre>[img[pictures/natav.jpg]]
