--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סולטנה ויסמין]] סולטנה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219163014387" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219165916043" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200219164047618" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200219170213883" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -15911,7 +15911,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170908140800978" modified="20170908165437244" tags="סולטנה" title="סולטנה ויסמין">
+<div created="20170908140800978" modified="20200219170239096" title="סולטנה ויסמין">
 <pre>[img[pictures/sultana-veyasmin.jpg]]
 
 !!![[יויו]]:
@@ -15922,6 +15922,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 צהלנו ורקדנו ושרנו ואכלנו [[מעוגת הסולת|עוגת סולת]] המעולה
 
+
+&lt;&lt;englink [[Sultana and Yasmin]]&gt;&gt;
 
 
 
