sonya andd mark

--- a/english.html
+++ b/english.html
@@ -317,6 +317,8 @@ Error message and password prompt
 
 <li>Christmas dinner</li>
 
+<li>Christmas dinner Recipes</li>
+
 <li>Coen sister</li>
 
 <li>Coen Sisters</li>
@@ -473,6 +475,8 @@ Error message and password prompt
 
 <li>Marianne</li>
 
+<li>Mark</li>
+
 <li>Materials</li>
 
 <li>Matza balls soup</li>
@@ -523,6 +527,8 @@ Error message and password prompt
 
 <li>Outer sisters</li>
 
+<li>Panettone</li>
+
 <li>Papa Yoel</li>
 
 <li>Passover Seder at Dad's and Tirza's</li>
@@ -561,7 +567,13 @@ Error message and password prompt
 
 <li>Revision in the kitchen</li>
 
+<li>Rice Pudding</li>
+
+<li>Rigo Jancsi</li>
+
 <li>RIP Dina</li>
+
+<li>Roast beef with potatoes</li>
 
 <li>Roje</li>
 
@@ -584,6 +596,8 @@ Error message and password prompt
 <li>Single parent children</li>
 
 <li>Six feet uner</li>
+
+<li>Sonia</li>
 
 <li>soul</li>
 
@@ -8559,7 +8573,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219170906884" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219174736662" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8568,7 +8582,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Sonia [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8588,7 +8602,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219170343921" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219174321092" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9155,6 +9169,22 @@ coming soon as possible
 
  &lt;&lt;heblink [[ארוחת כריסמס]]&gt;&gt;</pre>
 </div>
+<div created="20200219172546963" modified="20200219172855056" tags="Meals Recipes [[Food addicts]]" title="Christmas dinner Recipes">
+<pre>[img[pictures/christmas-dinner.jpg]]
+
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[Christmas dinner Recipes ]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[מתכוני ארוחת הכריסמס]]&gt;&gt;
+
+
+
+
+</pre>
+</div>
 <div created="20200212220505011" modified="20200215162033334" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
 <pre>[img[pictures/achot-coen.jpg]]
 
@@ -9379,7 +9409,7 @@ Sherlock, in the Jonny Lee Miller version, watches seven screens at the same tim
 
 </pre>
 </div>
-<div created="20200202161040118" modified="20200202161942123" tags="Metafiction [[The estate]]" title="Eva">
+<div created="20200202161040118" modified="20200219171823127" tags="Metafiction [[The estate]] [[Coen sister]] Baking [[Menopause sisters]]" title="Eva">
 <pre>[img[pictures/eva-veyoyo.jpg]]
 
 
@@ -9494,7 +9524,7 @@ Or as Alfred used to say:
 
 </pre>
 </div>
-<div created="20200213145354960" modified="20200219133037858" tags="[[Coen sister]] Mothers [[The kitchen by Genevieve]]" title="Genevieve">
+<div created="20200213145354960" modified="20200219171845530" tags="[[Coen sister]] Mothers [[The kitchen by Genevieve]] [[Menopause sisters]]" title="Genevieve">
 <pre>[img[pictures/genevieve.jpg]]
 
 
@@ -9618,8 +9648,7 @@ Also now, since I've opened this site, she hasn't stopped writing, filling and d
 </pre>
 </div>
 <div created="20200219162857382" modified="20200219163847674" tags="[[The kitchen by Genevieve]] [[Food addicts]] Kitchens [[Menopause sisters]]" title="Hair up">
-<pre>
-[img[pictures/searot-leachor.jpg]]
+<pre>[img[pictures/searot-leachor.jpg]]
 
 !!![[Genevieve]]:
 
@@ -10111,7 +10140,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200219170918891" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200219174827887" tags="Kitchens [[The kitchen by Genevieve]]" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10141,6 +10170,15 @@ For example, it seethes me when people use words purposelessly, like the word lo
 
  
  &lt;&lt;heblink [[מריאן]]&gt;&gt;
+</pre>
+</div>
+<div created="20200219173118907" modified="20200219173216593" tags="[[Coen sister]]" title="Mark">
+<pre>
+[img[pictures/mark1.jpg]]
+
+
+ &lt;&lt;heblink [[מרק]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200217205455825" modified="20200219133401376" tags="Coffee Kitchens [[Food addicts]] [[The kitchen by Genevieve]]" title="Materials">
@@ -10485,6 +10523,16 @@ Here in the [[archive|The archive's trustees]] we add from time to time, with lo
 
 </pre>
 </div>
+<div created="20200219173952522" modified="20200219174045940" tags="[[Christmas dinner Recipes]] Recipes" title="Panettone">
+<pre>
+[img[pictures/panatone.jpg]]
+
+
+
+ &lt;&lt;heblink [[פנטונה]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200101125351383" modified="20200217130117310" tags="" title="Papa Yoel">
 <pre>[img[pictures/aba-vetirza.jpg]]
 
@@ -10725,8 +10773,7 @@ From our [[rear window|https://www.imdb.com/title/tt0047396/]] you can mostly he
  &lt;&lt;heblink [[מסעדות]]&gt;&gt;</pre>
 </div>
 <div created="20200219163524836" modified="20200219163712182" tags="Kitchens Restaurants [[The kitchen by Genevieve]] [[On the road to somewhere]] [[Food addicts]]" title="Revision in the kitchen">
-<pre>
-[img[pictures/revisia-bamitbach.jpg]]
+<pre>[img[pictures/revisia-bamitbach.jpg]]
 
 
 
@@ -10734,6 +10781,27 @@ From our [[rear window|https://www.imdb.com/title/tt0047396/]] you can mostly he
 
  &lt;&lt;heblink [[רביזיה במטבח]]&gt;&gt;
 </pre>
+</div>
+<div created="20200219174756600" modified="20200219174850866" tags="Recipes [[Food addicts]] Restaurants" title="Rice Pudding">
+<pre>
+[img[pictures/rice-pudding.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[פודינג אורז]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200219174433509" modified="20200219174520799" tags="Recipes [[Christmas dinner Recipes]]" title="Rigo Jancsi">
+<pre>
+[img[pictures/rigo-jancsi.jpg]]
+
+
+ &lt;&lt;heblink [[ריגו יאנצ'י]]&gt;&gt;</pre>
 </div>
 <div created="20200215173704718" modified="20200215175926497" tags="Mothers [[The Baumans]]" title="RIP Dina">
 <pre>[img[pictures/ima-shel-gura.jpg]]
@@ -10755,6 +10823,16 @@ Though, therapy speaking, I'm covered in every direction, only recently after [[
 
 
  &lt;&lt;heblink [[דינה זכרה לברכה]]&gt;&gt;</pre>
+</div>
+<div created="20200219173640193" modified="20200219173922035" tags="[[Christmas dinner Recipes]] Recipes [[Food addicts]]" title="Roast beef with potatoes">
+<pre>
+[img[pictures/zli-bakar.jpg]]
+
+
+
+ &lt;&lt;heblink [[צלי בשר עם תפוחי אדמה]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20200218190952659" modified="20200218191053045" tags="[[Coen sister]]" title="Roje">
 <pre>[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
@@ -10808,8 +10886,7 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
  &lt;&lt;heblink [[ריחות]]&gt;&gt;</pre>
 </div>
 <div created="20200219170734669" modified="20200219170944403" tags="Baking [[Food addicts]] Recipes" title="Semolina cake">
-<pre>
-[img[pictures/ugat-solet.jpg]]
+<pre>[img[pictures/ugat-solet.jpg]]
 
 
 
@@ -10869,6 +10946,27 @@ Time heals us, and now, mother and us have [[Joseph|Jozef Abaroa]] and Alfred an
 
 
  &lt;&lt;heblink [[עמוק באדמה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200219171119429" modified="20200219174729181" tags="[[Coen sister]] Baking [[Menopause sisters]]" title="Sonia">
+<pre>[img[pictures/sonya.jpg]]
+
+
+!!![[Gura]]:
+
+Wonderful Sonia is a fifty six or seven Hungarian woman. She and [[Mark]], her husband, immigrated to Paris when they were already 50 years old, following their two sons.
+
+Both of them spoke French as a second language from a young age. 
+
+She's an amazing cook. On her head there is a giant bun, she's pretty tall and the sweetest in the world. 
+
+For Christmas dinner she made a [[roast beef with potatoes|Roast beef with potatoes]], [[Panettone]] and [[Rigo Jancsi]].
+
+Lately they've started serving [[rice pudding|Rice Pudding]] in [[the Couscous|The Couscous]], which Sonia makes.
+
+ 
+
+ &lt;&lt;heblink [[סוניה]]&gt;&gt;
 </pre>
 </div>
 <div created="20191113140141218" modified="20200216151001038" tags="Metafiction" title="soul">
@@ -10936,8 +11034,7 @@ You can read more [[trivia details|https://m.imdb.com/name/nm0000114/trivia?ref_
 </pre>
 </div>
 <div created="20200219163855213" modified="20200219170137506" tags="Mothers [[The kitchen by Genevieve]] Restaurants" title="Sultana">
-<pre>
-[img[pictures/sultana.jpg]]
+<pre>[img[pictures/sultana.jpg]]
 
 
 !!![[Yoyo]]:
@@ -10957,8 +11054,7 @@ She's 56, married to Jan Paul and mother of two boys, Serge (30) and [[Camil (28
  &lt;&lt;heblink [[סולטנה]]&gt;&gt;</pre>
 </div>
 <div created="20200219165844669" modified="20200219170648067" tags="[[Coen sister]]" title="Sultana and Yasmin">
-<pre>
-[img[pictures/sultana-veyasmin.jpg]]
+<pre>[img[pictures/sultana-veyasmin.jpg]]
 
 !!![[Yoyo]]:
 
@@ -11212,7 +11308,7 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
 </pre>
 </div>
-<div created="20200213161521882" modified="20200219133510338" tags="Meals Kitchens Recipes" title="The kitchen by Genevieve">
+<div created="20200213161521882" modified="20200219172816749" tags="Meals Kitchens Recipes" title="The kitchen by Genevieve">
 <pre>[img[pictures/genevieve-food.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[The kitchen by Genevieve]]&quot;&gt;&gt;
