--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[סולטנה ויסמין]] סולטנה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219165916043" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219172214302" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9613,7 +9613,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200219170213883" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200219174918094" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -15519,12 +15519,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 המודל לקוח [[מספרינגפילד|https://he.wikipedia.org/wiki/%D7%A1%D7%A4%D7%A8%D7%99%D7%A0%D7%92%D7%A4%D7%99%D7%9C%D7%93_(%D7%9E%D7%A9%D7%A4%D7%97%D7%AA_%D7%A1%D7%99%D7%9E%D7%A4%D7%A1%D7%95%D7%9F)]], ולמעט כרסום חלקים משלושה יערות, וכתישת שוניות אלמוגים לא נעשה כל נזק נראה לעין לסביבה.</pre>
 </div>
-<div created="20170331201741562" modified="20170417190759219" tags="[[אחות כהן]]" title="מרק">
+<div created="20170331201741562" modified="20200219173306289" tags="[[אחות כהן]]" title="מרק">
 <pre>[img[pictures/mark1.jpg]]
 
 !!![[גורה]]:
 
-מרק הוא גבר שבגברים, הוא בעלה ההונגרי של [[סוניה]] ההונגריה, והוא מתכנת מחשבים, שפדה את חובו ועשה אקזיט כדבעי.</pre>
+מרק הוא גבר שבגברים, הוא בעלה ההונגרי של [[סוניה]] ההונגריה, והוא מתכנת מחשבים, שפדה את חובו ועשה אקזיט כדבעי.
+
+&lt;&lt;englink [[Mark]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20181101191733525" modified="20181101203139424" tags="[[אירי טוענת]] [[חיות אוכל]] מתכונים [[מתכונים טבעוניים]]" title="מרק טחון">
 <pre>[img[pictures/marak-tachoon.jpg]]
@@ -15684,7 +15689,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161114205035106" modified="20200212144343164" tags="ארוחות [[חיות אוכל]] מתכונים" title="מתכוני ארוחת הכריסמס">
+<div created="20161114205035106" modified="20200219173000791" tags="ארוחות [[חיות אוכל]] מתכונים" title="מתכוני ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -15696,6 +15701,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[מתכוני ארוחת הכריסמס]]&quot;&gt;&gt;
 
+
+&lt;&lt;englink [[Christmas dinner Recipes]]&gt;&gt;
 
 
 </pre>
@@ -15931,7 +15938,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170331195529688" modified="20181020120958665" tags="[[אחות כהן]] אימהות" title="סוניה">
+<div created="20170331195529688" modified="20200219171729977" tags="[[אחות כהן]] אימהות" title="סוניה">
 <pre>[img[pictures/sonya.jpg]]
 
 !!![[גורה]]:
@@ -15944,7 +15951,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 לארוחת הכריסמס היא הכינה [[צלי בשר עם תפוחי אדמה]], [[פנטונה]], ו-[[ריגו יאנצ'י]].
 
-בזמן האחרון התחילו להגיש [[בקוסקוס|הקוסקוס]], [[פודינג אורז]], שסוניה מכינה.</pre>
+בזמן האחרון התחילו להגיש [[בקוסקוס|הקוסקוס]], [[פודינג אורז]], שסוניה מכינה.
+
+&lt;&lt;englink [[Sonia]]&gt;&gt;
+</pre>
 </div>
 <div created="20170425213116567" modified="20200215102030583" tags="[[בחוות החיות]]" title="סוסים לדבק">
 <pre>[img[pictures/soosim-ledevek.jpg]]
@@ -16471,7 +16481,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170908141536225" modified="20190314145254077" tags="סולטנה [[חיות אוכל]] מתכונים אפייה" title="עוגת סולת">
+<div created="20170908141536225" modified="20200219170846330" tags="[[חיות אוכל]] מתכונים אפייה" title="עוגת סולת">
 <pre>[img[pictures/ugat-solet.jpg]]
 
 
@@ -16513,6 +16523,7 @@ __אופן ההכנה:__
 
 
 
+&lt;&lt;englink [[Semolina cake]]&gt;&gt;
 </pre>
 </div>
 <div created="20170702161916288" modified="20190314145310047" tags="[[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="עוגת פרג שוקולד">
@@ -17175,7 +17186,7 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170620150716805" modified="20180605132254623" tags="[[חיות אוכל]] מתכונים" title="פודינג אורז">
+<div created="20170620150716805" modified="20200219174947456" tags="[[חיות אוכל]] מתכונים" title="פודינג אורז">
 <pre>[img[pictures/rice-pudding.jpg]]
 
 !!![[סוניה]]:
@@ -17205,6 +17216,8 @@ __אופן ההכנה____
 
 5. [[בקוסקוס|הקוסקוס]] אנחנו מגישים את זה קר וכמו שזה, אבל אפשר גם לפזר מעל הפודינג, קוקוס, אגוזים, פירות, רוטב, סירופ...
 
+
+&lt;&lt;englink [[Rice Pudding]]&gt;&gt;
 </pre>
 </div>
 <div created="20170419212629057" modified="20200202191428063" title="פוליטיקאי">
@@ -17428,7 +17441,7 @@ __אופן ההכנה____
 * אפשר להגיש מיד או לתת לזה לעמוד, או לאפסן ולהגיש גם כמה ימים לאחר ההכנה.
 </pre>
 </div>
-<div created="20170413193637751" modified="20180605133843774" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="פנטונה">
+<div created="20170413193637751" modified="20200219174135650" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="פנטונה">
 <pre>[img[pictures/panatone.jpg]]
 
 !!![[סוניה]]:
@@ -17475,7 +17488,10 @@ __אופן ההכנה____
 
 10. מבשלים סירופ מכוס מיץ תפוזים וחצי כוס סוכר ומוזגים אותו מעל בעדינות כשהעוג שיצאה מהתנור עדיים חמה.
 
-</pre>
+
+
+
+&lt;&lt;englink [[Panettone]]&gt;&gt;</pre>
 </div>
 <div created="20180715130000278" modified="20190617134720721" tags="[[כאן בגטו]] [[חיות אוכל]] מטבחים מסעדות" title="פסטה מיאה">
 <pre>[img[pictures/pasta-mia.jpg]]
@@ -17641,7 +17657,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170412170336651" modified="20180605133900719" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="צלי בשר עם תפוחי אדמה">
+<div created="20170412170336651" modified="20200219173847205" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="צלי בשר עם תפוחי אדמה">
 <pre>[img[pictures/zli-bakar.jpg]]
 
 !!![[סוניה]]:
@@ -17672,7 +17688,11 @@ Fapina''
 * לאט לאט מכינסים את  הירקות  החבושים בשלמותם,     
 וצולים אותם מכל הכוונים ומכבים את הלהבה.
 * לאחר שהצלי התקרר מעט (20 דקות), מוסיפים מים כדי כיסוי ומבשלים אותו מעל להבה נמוכה שעה.
-* לאחר שעה מערבבים בקערה את החרדל, היין, הדבש והתבלינים. מוסיפים אותם לצלי שעל הכיריים וממשיכים לבשל שלוש שעות נוספות לפחות.</pre>
+* לאחר שעה מערבבים בקערה את החרדל, היין, הדבש והתבלינים. מוסיפים אותם לצלי שעל הכיריים וממשיכים לבשל שלוש שעות נוספות לפחות.
+
+
+&lt;&lt;englink [[Roast beef with potatoes]]&gt;&gt;
+</pre>
 </div>
 <div created="20170323213155309" modified="20170704125840197" tags="[[אחות כהן]]" title="קואנג">
 <pre>[img[pictures/queng.jpg]]
@@ -18173,7 +18193,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170413225102132" modified="20180605133937578" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="ריגו יאנצ'י">
+<div created="20170413225102132" modified="20200219174613753" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="ריגו יאנצ'י">
 <pre>[img[pictures/rigo-jancsi.jpg]]
 
 !!![[סוניה]]:
@@ -18217,7 +18237,7 @@ Fapina''
 מקררים כמה שעות ומגישים
 
 
-</pre>
+&lt;&lt;englink [[Rigo Jancsi]]&gt;&gt;</pre>
 </div>
 <div created="20170124175341008" modified="20200217135049352" tags="[[הנחלה בה גדלתי]] בתים" title="ריחות">
 <pre>[img[pictures/reychot.jpg]]
