--- a/english.html
+++ b/english.html
@@ -479,7 +479,7 @@ Error message and password prompt
 
 <li>Materials</li>
 
-<li>Matza balls soup</li>
+<li>Matza ball soup</li>
 
 <li>Meals</li>
 
@@ -8573,7 +8573,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200219174736662" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200219181343715" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8582,7 +8582,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Sonia [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Revision in the kitchen]] Sonia [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8602,7 +8602,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200219174321092" title="$:/temp/search">
+<div created="20161023184814872" modified="20200219181341625" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9169,14 +9169,14 @@ coming soon as possible
 
  &lt;&lt;heblink [[ארוחת כריסמס]]&gt;&gt;</pre>
 </div>
-<div created="20200219172546963" modified="20200219172855056" tags="Meals Recipes [[Food addicts]]" title="Christmas dinner Recipes">
+<div created="20200219172546963" modified="20200219180119304" tags="Meals Recipes [[Food addicts]]" title="Christmas dinner Recipes">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
 
 
 
-&lt;&lt;list-links filter:&quot;[tag[Christmas dinner Recipes ]]&quot;&gt;&gt;
+&lt;&lt;list-links filter:&quot;[tag[Christmas dinner Recipes]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[מתכוני ארוחת הכריסמס]]&gt;&gt;
 
@@ -10213,7 +10213,7 @@ And tea is for the sicken ones.
 
  &lt;&lt;heblink [[חומרים]]&gt;&gt;</pre>
 </div>
-<div created="20200215115312612" modified="20200215115447306" tags="Recipes [[Food addicts]] Meals" title="Matza balls soup">
+<div created="20200215115312612" modified="20200219181126692" tags="Recipes [[Food addicts]] Meals" title="Matza ball soup">
 <pre>[img[pictures/marak-im-kneydalach.jpg]]
 
 
@@ -10772,10 +10772,13 @@ From our [[rear window|https://www.imdb.com/title/tt0047396/]] you can mostly he
 
  &lt;&lt;heblink [[מסעדות]]&gt;&gt;</pre>
 </div>
-<div created="20200219163524836" modified="20200219163712182" tags="Kitchens Restaurants [[The kitchen by Genevieve]] [[On the road to somewhere]] [[Food addicts]]" title="Revision in the kitchen">
+<div created="20200219163524836" modified="20200219181305049" tags="Kitchens Restaurants [[The kitchen by Genevieve]] [[On the road to somewhere]] [[Food addicts]]" title="Revision in the kitchen">
 <pre>[img[pictures/revisia-bamitbach.jpg]]
 
 
+!!![[Genevieve]]:
+
+Apparently things do come in bundles. [[The letter from Dandan|Chez Panisse]] came just in time for me. I wanted a change. [[The slow food|https://en.wikipedia.org/wiki/Slow_Food]] caught me, because most of all, the stress of the service is hard for me. And style speaking- it's true that couscous is actually slow food, but the [[Californian kitchen|https://en.wikipedia.org/wiki/California_cuisine]] spoke to me material speaking. In addition to that- a store near the Couscous is being vacated, so I can enlarge the place, and that's it, I've made my mind. In a month I'll close the restaurant for two weeks to a month. We'll plan a more comfortable kitchen for the new working method. I'll leave the non-serving tables, and open [[a slow motion delicatessen|Delicatessen Chez Genevieve]] inspired by the Californian kitchen. Kind of a &quot;private collection&quot;. Of course there will be couscous. I have [[Sonia]], [[Sultana]], [[Eva]], all of the children- and the best part, [[Iry]] and [[Yoyo]] decided to make a [[matza ball soup|Matza ball soup]]
 
 
 
@@ -10850,12 +10853,12 @@ The building, the strings and what's between them.
  &lt;&lt;heblink [[רוממה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215111759981" modified="20200215203734389" tags="Meals [[Food addicts]] [[Monkeys with car keys]]" title="Rosh Hashana dinner">
+<div created="20200215111759981" modified="20200219181335965" tags="Meals [[Food addicts]] [[Monkeys with car keys]]" title="Rosh Hashana dinner">
 <pre>[img[pictures/aruchat-rosh-hashana.jpg]]
 
 !!![[Yoyo]]:
 
-Rosh Hashana 2017 was really something. Meaning, in the end of the day it was great. The beginning was good, but in the middle, [[Gura]] became ill with certain bitternessis. The wine she drank did not do well on that matter. Genevieve and Rogge talked about the [[delicatessen|Delicatessen Chez Genevieve]]  that's gonna open up instead of [[the Couscous|The Couscous]]. The two of them talked calmly about the importance of the raw materials, because Genevieve wants to &quot;level up&quot; on that issue. Long story short, Gura gave a revolting speech about how &quot;all of you turned into feinschmeckers&quot;. She also mocked Iry and I and the [[matza balls|Matza balls soup]]: &quot;how far will you go? Where will you run to get a-one-day-old beet or a crab with an ancient taste?&quot; she screamed, stood up and walked to her room. Two hours later, when most of us were watching [[the last episode|An open ending]] of [[The Sopranos]]. Happy with ourselves. Full of food, drinks, indulgences and the terminal show she showed up looking at us. We smiled at her, she sat down between Eva and Philippe. It was great gummy-a-bearge
+Rosh Hashana 2017 was really something. Meaning, in the end of the day it was great. The beginning was good, but in the middle, [[Gura]] became ill with certain bitternessis. The wine she drank did not do well on that matter. Genevieve and Rogge talked about the [[delicatessen|Delicatessen Chez Genevieve]]  that's gonna open up instead of [[the Couscous|The Couscous]]. The two of them talked calmly about the importance of the raw materials, because Genevieve wants to &quot;level up&quot; on that issue. Long story short, Gura gave a revolting speech about how &quot;all of you turned into feinschmeckers&quot;. She also mocked Iry and I and the [[matza balls|Matza ball soup]]: &quot;how far will you go? Where will you run to get a-one-day-old beet or a crab with an ancient taste?&quot; she screamed, stood up and walked to her room. Two hours later, when most of us were watching [[the last episode|An open ending]] of [[The Sopranos]]. Happy with ourselves. Full of food, drinks, indulgences and the terminal show she showed up looking at us. We smiled at her, she sat down between Eva and Philippe. It was great gummy-a-bearge
 
  &lt;&lt;heblink [[ארוחת ראש השנה]]&gt;&gt;</pre>
 </div>
