--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[רביזיה במטבח]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -15580,7 +15580,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170924155536957" modified="20200215115943378" tags="[[חיות אוכל]] מתכונים" title="מרק עם קניידלך">
+<div created="20170924155536957" modified="20200219181058042" tags="[[חיות אוכל]] מתכונים" title="מרק עם קניידלך">
 <pre>[img[pictures/marak-im-kneydalach.jpg]]
 
 !!![[יויו]]:
@@ -15634,7 +15634,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 את המרק מגישים כשהוא חם, מקושט בעלי פטרוזילה טריים.
 
-&lt;&lt;englink [[Matza balls soup]]&gt;&gt;</pre>
+&lt;&lt;englink [[Matza ball soup]]&gt;&gt;</pre>
 </div>
 <div created="20180603160754396" modified="20190310195704157" tags="סדרות [[אחיות חוץ]] חבר טלוויזיה" title="משחקי הכס">
 <pre>[img[pictures/game-of-thrones.jpg]]
